   - Laser energy blocks.
   - Fusion Energy Structure Laser Beam.
  Added an Auto Shutoff toggle to the Portal Control Panel.
  Fixed crashes regarding ticking TileEntities and getCapabilities().
   - Only for 1.14 and 1.15 versions.
  Compressor:
   - Now has an input filter.
   - Fixed Hoppers being able to put items into an inaccessible 2nd slot.



v1.3.1 - August 13, 2020
  No longer changes Music Box track instrument when you set notes.
   - Change track instrument by clicking the instrument button beside each track.
  Added a config option to control blending effects in certain machines.
  Added Gem Converter advancements.
  Reduced the Number of Compressor Slots from 2 to 1.
   - Removed the Bronze Ingot compressor recipe. You now get Bronze from crafting
     3 Copper Ingots and 1 Tin Ingot.
For Minecraft 1.14 and 1.15 versions Only:
  Fix warnings in console log relating to inaccessible block loot table entries.
   - Also fixes not being able to silk-touch Gem Ore blocks.
  Fixed: Gem Ores now drop experience again.
  Fix description for Void Crystal advancement not being translated.
  Fixed problems using the Music Sheet on certain sides of the Music Box.



v1.3 - July 1, 2020
  ADDSynth Energy is now its own mod.
   - Moved Power Core, Advanced Power Core, Energy Wire, Energy Storage Container,
     Electric Furnace, Compressor, and Universal Energy Interface.
   - As a result, some of the recipes for these have changed.
   - This means that your previous worlds will be incompatible if you upgrade to this
      version. Forge will warn you that some blocks and items are missing.
  Moved config options that specifically alter Machine values into a dedicated
    MachineValues config file.
  New Portal Control Panel texture.
  Advanced Ore Refinery now has its own texture.
  Black Hole Optimization:
   - No longer erases blocks in a single tick, causing lag. Black Hole algorithm