@@ -7,6 +7,7 @@ import addsynth.energy.blocks.MachineBlock;
 import addsynth.overpoweredmod.OverpoweredMod;
 import addsynth.overpoweredmod.assets.CreativeTabs;
 import net.minecraft.block.BlockState;
+import net.minecraft.block.material.MaterialColor;
 import net.minecraft.client.util.ITooltipFlag;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.ServerPlayerEntity;
@@ -25,7 +26,7 @@ import net.minecraftforge.fml.network.NetworkHooks;
 public final class GemConverter extends MachineBlock {
 
   public GemConverter(final String name){
-    super();
+    super(MaterialColor.SNOW);
     OverpoweredMod.registry.register_block(this, name, new Item.Properties().group(CreativeTabs.machines_creative_tab));
   }
 
@@ -35,6 +36,7 @@ public final class GemConverter extends MachineBlock {
   }
 
   @Override
+  @SuppressWarnings("deprecation")
   public final TileEntity createNewTileEntity(final IBlockReader worldIn){
     return new TileGemConverter();
   }
