@@ -110,7 +110,8 @@ public final class LaserCannon extends BlockTile implements IWaterLoggable {
   }
 
   public LaserCannon(final String name, final int color){
-    super(Block.Properties.create(Material.IRON, MaterialColor.STONE).sound(SoundType.METAL).hardnessAndResistance(3.5f, 6.0f));
+    super(Block.Properties.create(Material.IRON, color >= 0 ? MaterialColor.STONE : MaterialColor.GRAY)
+      .sound(SoundType.METAL).hardnessAndResistance(3.5f, 6.0f));
     OverpoweredMod.registry.register_block(this, name, new Item.Properties().group(CreativeTabs.machines_creative_tab));
     this.setDefaultState(this.stateContainer.getBaseState().with(FACING, Direction.NORTH).with(WATERLOGGED, false));
     this.color = color;
@@ -125,6 +126,7 @@ public final class LaserCannon extends BlockTile implements IWaterLoggable {
 
   @Override
   @Nullable
+  @SuppressWarnings("resource")
   public BlockState getStateForPlacement(BlockItemUseContext context){
     final IWorld world = context.getWorld();
     final BlockPos position  = context.getPos();
